dev: flashcard scss fix h1 space, amend guide header spacing

--- a/app/assets/sass/hod-patterns/_flashcard.scss
+++ b/app/assets/sass/hod-patterns/_flashcard.scss
@@ -6,6 +6,11 @@
     padding: 30px;
     background: $link-colour;
     color: $page-colour;
+    h1 {
+      &:first-of-type {
+        margin-top: 0 !important;
+      }
+    }
     a {
       color: $page-colour;
       &:visited, &:hover, &:active {
